Update SVG Text positioning values on metrics change

When font metrics change it can change the positioning
of child tspan elements within an SVG text element. So
update positions when the font changes.

R=fs@opera.com
BUG=755518

Change-Id: I6a8686e4bcdd14e820eba8770aa9c682146b467c